--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,10 @@ description: > # this means to ignore newlines until "baseurl:"
   This is my jekyll based github paged blog. You might have gotten here from my domain where I refer to this as reality.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://poproar.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+
+show_downloads: true
+# google_analytics:
+
 twitter_username: poproar
 github_username:  poproar
 
