add some new stuff from old site

--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: popROAR
 email: github-user@poproar.com
 domain: .com
 description: > # this means to ignore newlines until "baseurl:"
-  This is my jekyll based github paged blog. You might have gotten here from my domain where I refer to this as reality.
+  A place for random stuff
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://poproar.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
